# teti-bot

./: .gitignore  README.md  package.json
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  lifecycle_bridge.rs  macos_panel.rs  main.rs  window.rs
core/account/: display-name.test.ts  display-name.ts  lifecycle.test.ts  lifecycle.ts  manager.ts  model.ts  storage.ts
core/ai-status/: protocol.test.ts  protocol.ts  types.ts
core/application/: handlers.ts  manager.test.ts  manager.ts
core/connection/: handshake.test.ts  handshake.ts  lifecycle.ts  manager.test.ts  manager.ts  protocol.ts  storage.ts  types.ts
core/crypto/: README.md
core/environment/: scanner.test.ts  scanner.ts  types.ts
docs/: TETI_BETA_MVP_1_0_ARCHITECTURE_FREEZE.md  TETI_BETA_MVP_1_0_PASSPORT_DOMAIN_INTEGRATION.md  alpha-local-reset.md  architecture-review.md  architecture.md  chatmail-integration-analysis.md  chatmail-integration.md  chatmail-openrpc-verification.md  chatmail-rpc-api-analysis.md  chatmail-runtime.md  deltachat-desktop-receive-path-analysis.md  security-model.md  teti-account-lifecycle.md  teti-alpha1-delivery-matrix.md  teti-alpha1-e2e-test.md  teti-alpha1-receive-blocker-analysis.md  teti-application-protocol.md  teti-auto-onboarding.md  teti-connection-protocol.md  teti-discovery.md  teti-environment-discovery.md  teti-public-id.md
protocol/: discovery-protocol.md  handshake-protocol.md  identity-schema.md
scripts/: teti-alpha1-real-message-e2e.ts
(+159 files in other folders)
