[package]
name = "teti-desktop"
version = "0.1.0"
description = "Teti macOS Desktop"
authors = ["Teti"]
edition = "2021"

[lib]
name = "teti_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
