[package]
name = "teti-desktop"
version = "0.1.0"
description = "Teti macOS Desktop"
authors = ["Teti"]
edition = "2021"

[lib]
name = "teti_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.4"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSColor", "NSPanel", "NSScreen", "NSView", "NSWindow", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSGeometry", "NSNotification", "NSOperation", "NSString"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "18ffb9a201fbf6fedfaa382fd4b92315ea30ab1a" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
